--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,15 @@
             <artifactId>modelmapper</artifactId>
             <version>3.1.0</version>
         </dependency>
+		<dependency>
+			<groupId>io.github.resilience4j</groupId>
+			<artifactId>resilience4j-spring-boot2</artifactId>
+			<version>1.7.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+		</dependency>
         <dependency>
             <groupId>br.com.queirozfood</groupId>
             <artifactId>pagamentos</artifactId>
