--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-aop</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
         <dependency>
             <groupId>br.com.queirozfood</groupId>
             <artifactId>pagamentos</artifactId>
